obake/tests/ui/items.stderr
error: expected `struct` or `enum`
 --> $DIR/items.rs:2:1
  |
2 | fn foo() {}
  | ^^
