obake/tests/ui/items.rs
#[obake::versioned]
fn foo() {}

fn main() {}
